# World_Bank_Correlations

./: CHANGELOG.md  CONTRIBUTING.md  README.md  WBC_Vignette.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/World_Bank_Correlations/: World_Bank_Correlations.py  __init__.py
tests/: test_World_Bank_Correlations.py
