[tool.poetry]
name = "World_Bank_Correlations"
version = "0.1.0"
description = "A package to investigate relationships between World Bank variables"
authors = ["John Marion"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
world-bank-data = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
