[tool.poetry]
name = "World_Bank_Correlations"
version = "0.1.0"
description = "A package to investigate relationships between World Bank variables"
authors = ["John Marion"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
world-bank-data = "^0.1.3"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
